source/gorilla/include_nim/common/gc_common.h


typedef struct gc_Link {
  struct gc_Link* next;
  struct gc_Link* prev;
  void* data;
} gc_Link;
typedef struct ga_Format {
  gc_int32 sampleRate; 
  gc_int32 bitsPerSample; 
  gc_int32 numChannels; 
};
struct ga_Device {
  gc_int32 devType; 
  gc_int32 numBuffers; 
  gc_int32 numSamples; 
  ga_Format format;
};
typedef gc_int32 (*tDataSourceFunc_Read)(void* in_context, void* in_dst, gc_int32 in_size, gc_int32 in_count);
typedef gc_int32 (*tDataSourceFunc_Seek)(void* in_context, gc_int32 in_offset, gc_int32 in_origin);
typedef gc_int32 (*tDataSourceFunc_Tell)(void* in_context);
typedef void (*tDataSourceFunc_Close)(void* in_context);
struct ga_DataSource {
  tDataSourceFunc_Read readFunc; 
  tDataSourceFunc_Seek seekFunc; 
  tDataSourceFunc_Tell tellFunc; 
  tDataSourceFunc_Close closeFunc; 
  gc_int32 refCount; 
  gc_Mutex* refMutex; 
  gc_int32 flags; 
};
typedef gc_int32 (*tSampleSourceFunc_Read)(void* in_context, void* in_dst, gc_int32 in_numSamples,
                                           tOnSeekFunc in_onSeekFunc, void* in_seekContext);
typedef gc_int32 (*tSampleSourceFunc_End)(void* in_context);
typedef gc_int32 (*tSampleSourceFunc_Ready)(void* in_context, gc_int32 in_numSamples);
typedef gc_int32 (*tSampleSourceFunc_Seek)(void* in_context, gc_int32 in_sampleOffset);
typedef gc_int32 (*tSampleSourceFunc_Tell)(void* in_context, gc_int32* out_totalSamples);
typedef void (*tSampleSourceFunc_Close)(void* in_context);
struct ga_SampleSource {
  tSampleSourceFunc_Read readFunc;
  tSampleSourceFunc_End endFunc;
  tSampleSourceFunc_Ready readyFunc;
  tSampleSourceFunc_Seek seekFunc; 
  tSampleSourceFunc_Tell tellFunc; 
  tSampleSourceFunc_Close closeFunc; 
  ga_Format format;
  gc_int32 refCount;
  gc_Mutex* refMutex;
  gc_int32 flags;
};
struct ga_Memory {
  void* data;
  gc_uint32 size;
  gc_int32 refCount;
  gc_Mutex* refMutex;
};
struct ga_Sound {
  ga_Memory* memory;
  ga_Format format;
  gc_int32 numSamples;
  gc_int32 refCount;
  gc_Mutex* refMutex;
};
struct ga_Handle {
  ga_Mixer* mixer;
  ga_FinishCallback callback;
  void* context;
  gc_int32 state;
  gc_float32 gain;
  gc_float32 pitch;
  gc_float32 pan;
  gc_Link dispatchLink;
  gc_Link mixLink;
  gc_Mutex* handleMutex;
  ga_SampleSource* sampleSrc;
  volatile gc_int32 finished;
};
struct ga_Mixer {
  ga_Format format;
  ga_Format mixFormat;
  gc_int32 numSamples;
  gc_int32* mixBuffer;
  gc_Link dispatchList;
  gc_Mutex* dispatchMutex;
  gc_Link mixList;
  gc_Mutex* mixMutex;
};
struct ga_StreamManager {
  gc_Link streamList;
  gc_Mutex* streamListMutex;
};